0.0.9
-----
1. Additional browse modes only supported if "Use categories as supplied by
   server" is enabled.
2. Fix missing menu items if using server supplied browse modes, and start in
   any view bar browse.
3. Fix 'What Was That Tune?' missing covers.
4. If a browse response returns a count of -1, then set count to number of
   items.

0.0.8
-----
 1. Only show 'Random Mix' if plugin is installed.
 2. Check that ExtendedBrowseModes is enabled before querying its list of modes.
 3. Likewise, check DontStopTheMusic is enabled before showing its config items.
 4. Fix covers, etc, for Album listing from Additional Browse Modes.
 5. When using additional browse modes, pass role_id when locating albums by
    (e.g.) composer.
 6. Respect server's "Filter Genres at the Album & Track Level" and
    "Filter Contributor Roles at the Album & Track Level" settings.
 7. Respect library_id setting for Additional Browse Modes.
 8. Add option to use browse modes as supplied by server.
 9. When listing albums (not under artist), use "Artist (Year)" as subtitle.
10. Follow material style, and place text to the left of switches.
11. Close full-screen dialogs (e.g. settings) via Escape key.
12. Scroll lists, not page.
13. Pinnable apps, etc.
14. Custom CSS scrollbars for WebKit browsers - blend in better with dark
    style.
15. Store active tab in local storage, and restore upon restart.
16. Only add "library_id" onto local library commands.
17. When saving queue, use current playlist name as default value.
18. Replace play/pause icon in toolbar with an info icon for now-playing
    screen, to activate song info dialog.
19. Remove thumbs from volume sliders, so that these can be smaller allowing
    more players to be visible in the player manager.

0.0.7
-----
 1. Add option to split artists and albums into A..Z groups.
 2. Fix power on/off.
 3. Show play queue even if player is off.
 4. Add basic info dialog; shows server stats, players, and allows library to