@@ -18,7 +18,7 @@ function parseBrowseResp(data, parent, options, idStart) {
                                   id: "artist_id:"+i.contributor_id,
                                   title: i.contributor,
                                   command: ["albums"],
-                                  params: ["artist_id:"+ i.contributor_id, "tags:jly", "sort:"+ARTIST_ALBUM_SORT_PLACEHOLDER],
+                                  params: ["artist_id:"+ i.contributor_id, ALBUM_TAGS, "sort:"+ARTIST_ALBUM_SORT_PLACEHOLDER],
                                   image: options.artistImages ? lmsServerAddress+"/imageproxy/mai/artist/" + i.contributor_id + "/image_100x100_o" : undefined,
                                   //icon: options.artistImages ? undefined : "person",
                                   menuActions: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, ADD_RANDOM_ALBUM_ACTION, DIVIDER, ADD_TO_FAV_ACTION],
@@ -34,7 +34,7 @@ function parseBrowseResp(data, parent, options, idStart) {
                                   id: "album_id:"+i.album_id,
                                   title: i.album,
                                   command: ["tracks"],
-                                  params: ["album_id:"+ i.album_id, "tags:Adt", "sort:tracknum"],
+                                  params: ["album_id:"+ i.album_id, TRACK_TAGS, "sort:tracknum"],
                                   image: lmsServerAddress+"/music/" + i.artwork + "/cover_100x100_o"  ,
                                   menuActions: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, ADD_TO_FAV_ACTION],
                                   type: "group",
@@ -347,7 +347,7 @@ function parseBrowseResp(data, parent, options, idStart) {
                               subtitle: subtitle,
                               command: ["tracks"],
                               image: lmsServerAddress+"/music/" + i.artwork_track_id + "/cover_100x100_o"  ,
-                              params: ["album_id:"+ i.id, "tags:Adt", "sort:tracknum"],
+                              params: ["album_id:"+ i.id, TRACK_TAGS, "sort:tracknum"],
                               menuActions: [PLAY_ACTION, INSERT_ACTION, ADD_ACTION, DIVIDER, ADD_TO_FAV_ACTION],
                               type: "group",
                               favIcon: i.artwork_track_id ? "music/"+i.artwork_track_id+"/cover" : undefined
